--- a/builds/e2e/e2e.yaml
+++ b/builds/e2e/e2e.yaml
@@ -38,7 +38,7 @@ jobs:
     - pwsh: |
         pwd
         sudo find . -type f -group root -execdir rm {} +
-        sudo find . -type d -group root -execdir rm -r '{}' \;
+        sudo find . -type d -group root -execdir rm -r {} \;
       displayName: Clean up files (as sudo)
 
     - template: templates/e2e-setup.yaml
