Using command line instead of pwsh

--- a/builds/e2e/e2e.yaml
+++ b/builds/e2e/e2e.yaml
@@ -35,10 +35,9 @@ jobs:
     timeoutInMinutes: 120
 
     steps:
-    - pwsh: |
-        set -x
-        sudo find . -type f -group root -execdir rm {} +
-        sudo find . -type d -group root -execdir rm -r {} \;
+    - task: CmdLine@2
+      inputs:
+        script: 'sudo find . -type f -group root -execdir rm {} + && sudo find . -type d -group root -execdir rm -r {} \;' 
       displayName: Clean up files (as sudo)
 
     - template: templates/e2e-setup.yaml
