add tests for leaf scenarios

--- a/mqtt/topic-translator/Cargo.toml
+++ b/mqtt/topic-translator/Cargo.toml
@@ -9,5 +9,6 @@ edition = "2018"
 [dependencies]
 lazy_static = "1.4"
 regex = "1"
+tracing = "0.1"
 
 mqtt3 = { path = "../mqtt3", features = ["serde1"] }
