--- a/builds/e2e/e2e.yaml
+++ b/builds/e2e/e2e.yaml
@@ -82,6 +82,8 @@ jobs:
 ################################################################################	
     displayName: Linux amd64
 
+    timeoutInMinutes: 180
+
     pool:
       vmImage: ubuntu-16.04
 
