--- a/edge-hub/src/Microsoft.Azure.Devices.Edge.Hub.Service/appsettings_hub.json
+++ b/edge-hub/src/Microsoft.Azure.Devices.Edge.Hub.Service/appsettings_hub.json
@@ -34,6 +34,11 @@
     "port": 7120,
     "baseUrl": "/authenticate/"
   },
+  "mqttBridgeSettings": {
+    "enabled": true,
+    "port": 8000,
+    "baseUrl": "localhost"
+  },
   "IotHubConnectionPoolSize": 1,
   "IotHubConnectionString": "",
   "mqttTopicNameConversion": {
