--- a/tools/IoTEdgeDevOps/IoTEdgeDashboard/IoTEdgeDashboard.csproj
+++ b/tools/IoTEdgeDevOps/IoTEdgeDashboard/IoTEdgeDashboard.csproj
@@ -1,9 +1,6 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
 
-  <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
-    <AspNetCoreHostingModel>InProcess</AspNetCoreHostingModel>
-  </PropertyGroup>
+  <Import Project="..\..\..\dotnetVersion.props" />
 
   <ItemGroup>
     <Content Include="AppConfig.cs" />
