use netstandard where possible

--- a/edge-agent/test/Microsoft.Azure.Devices.Edge.Agent.Kubernetes.IntegrationTest/Microsoft.Azure.Devices.Edge.Agent.Kubernetes.IntegrationTest.csproj
+++ b/edge-agent/test/Microsoft.Azure.Devices.Edge.Agent.Kubernetes.IntegrationTest/Microsoft.Azure.Devices.Edge.Agent.Kubernetes.IntegrationTest.csproj
@@ -1,6 +1,6 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
-  <Import Project="..\..\..\dotnetVersion.props" />
+  <Import Project="..\..\..\netcoreappVersion.props" />
 
   <PropertyGroup>
         <TreatWarningsAsErrors>True</TreatWarningsAsErrors>
