--- a/tools/IoTEdgeDevOps/DevOpsLib/DevOpsLib.csproj
+++ b/tools/IoTEdgeDevOps/DevOpsLib/DevOpsLib.csproj
@@ -1,6 +1,6 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
-  <Import Project="..\..\..\dotnetVersion.props" />
+  <Import Project="..\..\..\netcoreappVersion.props" />
 
   <ItemGroup>
     <PackageReference Include="Flurl" Version="3.0.0-pre3" />
