--- a/tools/IoTEdgeDevOps/IoTEdgeDashboard/IoTEdgeDashboard.csproj
+++ b/tools/IoTEdgeDevOps/IoTEdgeDashboard/IoTEdgeDashboard.csproj
@@ -1,6 +1,6 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
 
-  <Import Project="..\..\..\dotnetVersion.props" />
+  <Import Project="..\..\..\netcoreappVersion.props" />
 
   <ItemGroup>
     <Content Include="AppConfig.cs" />
