[MQTT] Added authentication HTTP endpoint for external processes (#2881)
MQTT Broker is running as an external process to EdgeHub, but relies on it to authenticate connecting clients. An HTTP endpoint is added to EdgeHub, which can receive different type of credentials (SAS token, certificates) and responses with yes/no, reflecting the authentication result.
The endpoint is designed for internal (in-container) use.

The main file is AuthAgentListener.cs, which handles the HTTP calls and dispatches the queries to the already implemented authentication machinery.

--- a/edge-hub/src/Microsoft.Azure.Devices.Edge.Hub.Service/appsettings_hub.json
+++ b/edge-hub/src/Microsoft.Azure.Devices.Edge.Hub.Service/appsettings_hub.json
@@ -29,6 +29,11 @@
     "enabled": true,
     "port": 443
   },
+  "authAgentSettings": {
+    "enabled": true,
+    "port": 7120,
+    "baseUrl": "/authenticate/"
+  },
   "IotHubConnectionPoolSize": 1,
   "IotHubConnectionString": "",
   "mqttTopicNameConversion": {
