fix functions module by publishing as application instead of lib

--- a/edge-modules/functions/samples/EdgeHubTrigger-Csharp/EdgeHubTriggerCSharp.csproj
+++ b/edge-modules/functions/samples/EdgeHubTrigger-Csharp/EdgeHubTriggerCSharp.csproj
@@ -1,6 +1,6 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <Import Project="..\..\..\..\netstandardVersion.props" />
+  <Import Project="..\..\..\..\netcoreappVersion.props" />
 
   <PropertyGroup>
     <AzureFunctionsVersion></AzureFunctionsVersion>
