--- a/builds/service/service-deployment.yaml
+++ b/builds/service/service-deployment.yaml
@@ -28,9 +28,15 @@ steps:
 
 - pwsh: |
     $testDir = '$(Build.SourcesDirectory)/test/Microsoft.Azure.Devices.Edge.Test'
-    dotnet build $testDir
+    $out = dotnet build $testDir
 
-    $binDir = Convert-Path "$testDir/bin/Debug/netcoreapp3.1"
+    $binDir = $out
+      | Where-Object { $_ -match 'Microsoft.Azure.Devices.Edge.Test.dll' }
+      | Select-Object -Last 1
+      | ForEach-Object { -split $_ }
+      | Select-Object -Last 1
+      | Get-Item
+      | ForEach-Object { $_.DirectoryName }
     Write-Output "##vso[task.setvariable variable=binDir]$binDir"
   displayName: Build tests
 
