--- a/builds/service/service-deployment.yaml
+++ b/builds/service/service-deployment.yaml
@@ -7,7 +7,7 @@ schedules:
   displayName: Nightly build
   branches:
     include:
-    - master
+    - release/1.0.9 # TODO: Return to 'master' once 1.0.10 is released
   always: true
 
 pool:
