--- a/edgelet/contrib/config/linux/config.yaml
+++ b/edgelet/contrib/config/linux/config.yaml
@@ -213,7 +213,7 @@ agent:
     auth: {}
 
 ###############################################################################
-# Nested Edge settings
+# Edge device hostname
 ###############################################################################
 #
 # Configures the environment variable 'IOTEDGE_GATEWAYHOSTNAME' injected into
@@ -229,7 +229,7 @@ agent:
 hostname: "<ADD HOSTNAME HERE>"
 
 ###############################################################################
-# Edge device hostname
+# Nested Edge parent hostname
 ###############################################################################
 #
 # Optional. This entry should only be specified for the host name of the 
