--- a/builds/e2e/templates/deploy-iotuap.yaml
+++ b/builds/e2e/templates/deploy-iotuap.yaml
@@ -38,6 +38,7 @@ parameters:
   metricsCollector.scrapeFrequencyInSecs: ''
   metricsCollector.uploadTarget: ''
   metricsCollector.hostPlatform: ''
+  longHaul.runtimeLogLevel: ''
 
 steps:
   - task: CopyFiles@2
@@ -121,6 +122,7 @@ steps:
         $testInfo=$testInfo+",HostPlatform=${{ parameters['metricsCollector.hostPlatform'] }}"
         $testInfo=$testInfo+",TestName=${{ parameters['testName'] }}"
         $testInfo=$testInfo+",UpstreamProtocol=amqp"
+        $testInfo=$testInfo+",RuntimeLogLevel=${{ parameters['longHaul.runtimeLogLevel'] }}"
         
         $ArtifactInfo=convertfrom-stringdata (get-content C:\Data\e2etests\artifacts\${{ parameters['images.artifact.name'] }}\artifactInfo.txt -raw)
         C:\Data\e2etests\artifacts\${{ parameters['images.artifact.name'] }}\scripts\windows\test\Run-E2ETest.ps1 `
@@ -158,5 +160,6 @@ steps:
           -MetricsUploadTarget "${{ parameters['metricsCollector.uploadTarget'] }}" `
           -TestInfo "$testInfo" `
           -TestStartDelay "$testStartDelay" `
+          -RuntimeLogLevel "${{ parameters['longHaul.runtimeLogLevel'] }}" `
           -BypassEdgeInstallation
       CommunicationProtocol: Http
