--- a/builds/e2e/templates/longhaul-deploy.yaml
+++ b/builds/e2e/templates/longhaul-deploy.yaml
@@ -31,6 +31,7 @@ parameters:
   metricsCollector.scrapeFrequencyInSecs: ''
   metricsCollector.uploadTarget: ''
   metricsCollector.hostPlatform: ''
+  longHaul.runtimeLogLevel: ''
 
 steps:
   - task: CopyFiles@2
@@ -61,6 +62,7 @@ steps:
         testInfo="$testInfo,HostPlatform=${{ parameters['metricsCollector.hostPlatform'] }}"
         testInfo="$testInfo,TestName=$testName"
         testInfo="$testInfo,UpstreamProtocol=amqp"
+        testInfo="$testInfo,RuntimeLogLevel=${{ parameters['longHaul.runtimeLogLevel'] }}"
         
         . $(Agent.HomeDirectory)/../artifacts/${{ parameters['images.artifact.name'] }}/artifactInfo.txt
         chmod +x $(Agent.HomeDirectory)/../artifacts/${{ parameters['images.artifact.name'] }}/scripts/linux/runE2ETest.sh
@@ -93,5 +95,6 @@ steps:
           -metricsUploadTarget "${{ parameters['metricsCollector.uploadTarget'] }}" \
           -testInfo "$testInfo" \
           -testStartDelay "${{ parameters['test.startDelay'] }}" \
+          -runtimeLogLevel "${{ parameters['longHaul.runtimeLogLevel'] }}" \
           -cleanAll
       workingDirectory: "$(Agent.HomeDirectory)/.."
