--- a/mqtt/Cargo.toml
+++ b/mqtt/Cargo.toml
@@ -2,8 +2,9 @@
 members = [
     "mqtt3",
     "mqtt-broker",
-    "mqttd",
+    "mqtt-broker-core",
     "mqtt-edgehub",
+    "mqttd",
 ]
 
 [profile.release]
