--- a/mqtt/mqtt-edgehub/Cargo.toml
+++ b/mqtt/mqtt-edgehub/Cargo.toml
@@ -5,8 +5,18 @@ authors = ["Azure IoT Edge Devs"]
 edition = "2018"
 
 [dependencies]
+async-trait = "0.1"
+base64 = "0.12.0"
 lazy_static = "1.4"
+mockito = "0.25"
 regex = "1"
+reqwest = { version = "0.10", features = ["json"] }
+serde = { version = "1.0", features = ["derive", "rc"] }
+serde_json = "1.0"
+serde_repr = "0.1"
+thiserror = "1.0"
+tokio = { version = "0.2", features = ["macros"] }
 tracing = "0.1"
 
 mqtt3 = { path = "../mqtt3", features = ["serde1"] }
+mqtt-broker-core = { path = "../mqtt-broker-core" }
