--- a/mqtt/mqttd/Cargo.toml
+++ b/mqtt/mqttd/Cargo.toml
@@ -15,4 +15,5 @@ tracing = "0.1"
 tracing-subscriber = "0.1"
 
 mqtt-broker = { path = "../mqtt-broker" }
+mqtt-broker-core = { path = "../mqtt-broker-core" }
 
