use flag --runtime-log-level to set edgeAgent

--- a/builds/e2e/templates/longhaul-deploy-windows.yaml
+++ b/builds/e2e/templates/longhaul-deploy-windows.yaml
@@ -31,7 +31,7 @@ parameters:
   metricsCollector.scrapeFrequencyInSecs: ''
   metricsCollector.uploadTarget: ''
   metricsCollector.hostPlatform: ''
-  longHaul.runtimeLogLevel: ''
+  test.runtimeLogLevel: ''
 
 steps:
   - task: CopyFiles@2
@@ -93,5 +93,5 @@ steps:
           -MetricsUploadTarget "${{ parameters['metricsCollector.uploadTarget'] }}" `
           -TestInfo "$testInfo" `
           -TestStartDelay "${{ parameters['test.startDelay'] }}" `
-          -RuntimeLogLevel "${{ parameters['longHaul.runtimeLogLevel'] }}"
+          -RuntimeLogLevel "${{ parameters['test.runtimeLogLevel'] }}"
       workingDirectory: "$(Agent.HomeDirectory)/.."
