--- a/builds/e2e/longhaul.yaml
+++ b/builds/e2e/longhaul.yaml
@@ -107,7 +107,7 @@ jobs:
           loadGen.message.frequency: '$(loadGen.message.frequency.amd64)'
           longHaul.desiredModulesToRestartCSV: '$(longHaul.desiredModulesToRestartCSV)'
           longHaul.restartIntervalInMins: '$(longHaul.restartIntervalInMins)'
-          longHaul.runtimeLogLevel: '$(longHaul.runtimeLogLevel)'
+          test.runtimeLogLevel: '$(test.runtimeLogLevel)'
           analyzer.consumerGroupId: 'longhaul_linux_amd64'
           logAnalytics.workspaceId: '$(kvLogAnalyticWorkspaceId)'
           logAnalytics.sharedKey: '$(kvLogAnalyticSharedKey)'
@@ -192,7 +192,7 @@ jobs:
           loadGen.message.frequency: '$(loadGen.message.frequency.arm32v7)'
           longHaul.desiredModulesToRestartCSV: '$(longHaul.desiredModulesToRestartCSV)'
           longHaul.restartIntervalInMins: '$(longHaul.restartIntervalInMins)'
-          longHaul.runtimeLogLevel: '$(longHaul.runtimeLogLevel)'
+          test.runtimeLogLevel: '$(test.runtimeLogLevel)'
           analyzer.consumerGroupId: 'longhaul_linux_arm32v7'
           logAnalytics.workspaceId: '$(kvLogAnalyticWorkspaceId)'
           logAnalytics.sharedKey: '$(kvLogAnalyticSharedKey)'
@@ -277,7 +277,7 @@ jobs:
           loadGen.message.frequency: '$(loadGen.message.frequency.arm64v8)'
           longHaul.desiredModulesToRestartCSV: '$(longHaul.desiredModulesToRestartCSV)'
           longHaul.restartIntervalInMins: '$(longHaul.restartIntervalInMins)'
-          longHaul.runtimeLogLevel: '$(longHaul.runtimeLogLevel)'
+          test.runtimeLogLevel: '$(test.runtimeLogLevel)'
           analyzer.consumerGroupId: 'longhaul_linux_arm64v8'
           logAnalytics.workspaceId: '$(kvLogAnalyticWorkspaceId)'
           logAnalytics.sharedKey: '$(kvLogAnalyticSharedKey)'
@@ -364,7 +364,7 @@ jobs:
           loadGen.message.frequency: '$(loadGen.message.frequency.amd64)'
           longHaul.desiredModulesToRestartCSV: '$(longHaul.desiredModulesToRestartCSV)'
           longHaul.restartIntervalInMins: '$(longHaul.restartIntervalInMins)'
-          longHaul.runtimeLogLevel: '$(longHaul.runtimeLogLevel)'
+          test.runtimeLogLevel: '$(test.runtimeLogLevel)'
           analyzer.consumerGroupId: 'longhaul_windows_amd64'
           logAnalytics.workspaceId: '$(kvLogAnalyticWorkspaceId)'
           logAnalytics.sharedKey: '$(kvLogAnalyticSharedKey)'
@@ -451,7 +451,7 @@ jobs:
           loadGen.message.frequency: '$(loadGen.message.frequency.amd64)'
           longHaul.desiredModulesToRestartCSV: '$(longHaul.desiredModulesToRestartCSV)'
           longHaul.restartIntervalInMins: '$(longHaul.restartIntervalInMins)'
-          longHaul.runtimeLogLevel: '$(longHaul.runtimeLogLevel)'
+          test.runtimeLogLevel: '$(test.runtimeLogLevel)'
           analyzer.consumerGroupId: 'longhaul_windows_servercore_amd64'
           logAnalytics.workspaceId: '$(kvLogAnalyticWorkspaceId)'
           logAnalytics.sharedKey: '$(kvLogAnalyticSharedKey)'
@@ -537,7 +537,7 @@ jobs:
           loadGen.message.frequency: '$(loadGen.message.frequency.amd64)'
           longHaul.desiredModulesToRestartCSV: '$(longHaul.desiredModulesToRestartCSV)'
           longHaul.restartIntervalInMins: '$(longHaul.restartIntervalInMins)'
-          longHaul.runtimeLogLevel: '$(longHaul.runtimeLogLevel)'
+          test.runtimeLogLevel: '$(test.runtimeLogLevel)'
           analyzer.consumerGroupId: 'longhaul_iotuap_amd64'
           logAnalytics.workspaceId: '$(kvLogAnalyticWorkspaceId)'
           logAnalytics.sharedKey: '$(kvLogAnalyticSharedKey)'
