--- a/builds/e2e/templates/deploy-iotuap.yaml
+++ b/builds/e2e/templates/deploy-iotuap.yaml
@@ -38,7 +38,7 @@ parameters:
   metricsCollector.scrapeFrequencyInSecs: ''
   metricsCollector.uploadTarget: ''
   metricsCollector.hostPlatform: ''
-  longHaul.runtimeLogLevel: ''
+  test.runtimeLogLevel: ''
 
 steps:
   - task: CopyFiles@2
@@ -159,6 +159,6 @@ steps:
           -MetricsUploadTarget "${{ parameters['metricsCollector.uploadTarget'] }}" `
           -TestInfo "$testInfo" `
           -TestStartDelay "$testStartDelay" `
-          -RuntimeLogLevel "${{ parameters['longHaul.runtimeLogLevel'] }}" `
+          -RuntimeLogLevel "${{ parameters['test.runtimeLogLevel'] }}" `
           -BypassEdgeInstallation
       CommunicationProtocol: Http
