Fixed broker CI build.

--- a/edge-hub/test/Microsoft.Azure.Devices.Edge.Hub.MqttBrokerAdapter.Test/Microsoft.Azure.Devices.Edge.Hub.MqttBrokerAdapter.Test.csproj
+++ b/edge-hub/test/Microsoft.Azure.Devices.Edge.Hub.MqttBrokerAdapter.Test/Microsoft.Azure.Devices.Edge.Hub.MqttBrokerAdapter.Test.csproj
@@ -1,10 +1,6 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <TargetFramework>netcoreapp2.2</TargetFramework>
-
-    <IsPackable>false</IsPackable>
-  </PropertyGroup>
+  <Import Project="..\..\..\netcoreappVersion.props" />
 
   <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.9.0" />
