--- a/mqtt/mqttd/Cargo.toml
+++ b/mqtt/mqttd/Cargo.toml
@@ -14,7 +14,7 @@ native-tls = "0.2"
 tracing = "0.1"
 tracing-subscriber = "0.1"
 
-mqtt-broker = { path = "../mqtt-broker" }
+mqtt-broker = { path = "../mqtt-broker", default-features = false }
 mqtt-broker-core = { path = "../mqtt-broker-core" }
 
 [features]
